# BTK

./: .gitignore  .replit  LICENSE  README.md  app.py  pdf_processor.py  pyproject.toml  requirements.txt
attached_assets/: Pasted--k-t-phane-import-pandas-as-pd-import-numpy-as-np-from-tabula-import-read-pdf-import-json-glob-o-1747266893834.txt  Pasted-SIRA-NO-NUMARA-T-P-D-ER-NUMARA-TAR-H-sim-Soyisim-Di-er-Numara-TC-Kimlik-No-Di-er-Numara-IMEI--1747256076756.txt
static/css/: dark-mode.css  filter-count.css  style.css
static/data/: call_records.csv  graphics_cards.json
static/js/: analytics.js  export.js  filter-config.js  filter-module.js  script.js
templates/: index.html  pdf_upload.html
tests/: test_pdf_processor.py
